# python-bcb

./: .buildinfo  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  QUESTIONS.md  README.md  api.html  async.html  currency.html  examples.html  expectativas.html  genindex.html  ifdata.html  index.html  objects.inv  odata.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sgs.html  taxajuros.html
.claude/: settings.json
.claude/plans/: dynamic-bubbling-glade.md  phase2-review.md  phase4-review.md  recursive-sniffing-snowflake.md  text-output.md
.doctrees/: api.doctree  async.doctree  currency.doctree  environment.pickle  expectativas.doctree  ifdata.doctree  index.doctree  odata.doctree  sgs.doctree  taxajuros.doctree
.github/workflows/: dependency-audit.yml  integration.yml  lint.yml  sphinx.yml  test.yml
_sources/: api.rst.txt  async.rst.txt  currency.rst.txt  expectativas.rst.txt  ifdata.rst.txt  index.rst.txt  odata.rst.txt  sgs.rst.txt  taxajuros.rst.txt
_static/: documentation_options.js
bcb/: __init__.py  currency.py  exceptions.py  http.py  odata.py  sgs.py  util.py  utils.py
bcb/odata/: __init__.py  api.py  framework.py
bcb/sgs/: __init__.py  regional_economy.py
docs/: api.rst  async.rst  conf.py  currency.rst  examples.rst  expectativas.rst  index.rst  odata.rst  project-health-hardening.md  requirements.txt  sgs.rst  taxajuros.rst
examples/: async_usage.py  currency_exchange.py  odata_query.py  sgs_time_series.py
notebooks/: SGS Economia Regional - Inadimplência.ipynb  bcb_Expectativas_da_SELIC_(nova_API).ipynb  currency PTAX.ipynb  currency get EUR parity.ipynb  currency get strong currencies.ipynb  currency get with side.ipynb  currency get.ipynb  dinheiro em circulação.ipynb  expectativas IPCA anual.ipynb  odata ODataAPI.ipynb  odata TaxaJuros.ipynb  odata examples.ipynb  odata taxas de juros cheque especial.ipynb  pix.odata  sgs get series with join.ipynb  sgs get series with period index.ipynb  sgs get series.ipynb  workspace.ipynb
plots/: currency1.py  sgs1.py
tests/: conftest.py  test_async.py  test_currenct.py  test_currency.py  test_currency_negative.py  test_exceptions.py  test_expectativas.py  test_http.py  test_odata.py  test_request_timeout.py  test_series.py  test_sgs_negative.py  test_utils.py
tests/integration/: test_currency.py  test_expectativas.py  test_sgs.py
tests/sgs/: test_regional_economy.py  test_series.py
