[tool.poetry]
name = "python-bcb"
version = "0.3.3"
description = ""
authors = ["wilsonfreitas <wilson.freitas@gmail.com>"]
readme = "README.md"
packages = [{ include = "bcb" }]

[tool.poetry.dependencies]
python = ">= 3.10"
httpx = ">= 0.24.0"
lxml = ">= 4.9.2"
pandas = ">= 2.0.0"

[tool.poetry.group.test.dependencies]
pytest = ">= 7.1.3"
flaky = ">= 3.7.0"
pytest-httpx = ">= 0.30.0"

[tool.poetry.group.docs.dependencies]
Sphinx = "^6"
pydata-sphinx-theme = "^0.16"
matplotlib = ">= 3.5.3"
ipython = ">= 8.14.0"
furo = "^2024"
pickleshare = "^0.7.5"
pygments = "^2.7"

[tool.poetry.group.dev.dependencies]
pycodestyle = ">= 2.9.1"
ipykernel = ">= 6.15.2"
black = { version = ">= 22.8.0", allow-prereleases = true }
jupyter = "^1.1.1"
mypy = ">= 1.0.0"
pytest-cov = ">= 4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["bcb"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
