[project]
name = "python-bcb"
version = "0.3.5"
description = ""
authors = [{ name = "wilsonfreitas", email = "wilson.freitas@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "httpx >= 0.24.0",
    "lxml >= 4.9.2",
    "pandas >= 2.0.0",
]

[dependency-groups]
test = [
    "pytest >= 7.1.3",
    "flaky >= 3.7.0",
    "pytest-httpx >= 0.30.0",
]
docs = [
    "Sphinx >= 6,<7",
    "pydata-sphinx-theme >= 0.16,<0.17",
    "matplotlib >= 3.5.3",
    "ipython >= 8.14.0",
    "furo >= 2024,<2025",
    "pickleshare >= 0.7.5,<0.8",
    "pygments >= 2.7",
]
dev = [
    "ruff >= 0.9.0",
    "ipykernel >= 6.15.2",
    "jupyter >= 1.1.1",
    "mypy >= 1.0.0",
    "pytest-cov >= 4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bcb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as requiring live BCB network access (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["bcb"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
