[metadata]
name = python-bcb
version = 0.1.5
author = Wilson Freitas
author_email = wilsonfreitas@gmail.com
description = Python interface to Brazilian Central Bank web services
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wilsonfreitas/python-bcb
project_urls =
    Bug Tracker = https://github.com/wilsonfreitas/python-bcb/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
